# coup_gto

./: .gitignore  README.md  pyproject.toml
coup_gto/: __init__.py  cli.py
coup_gto.egg-info/: PKG-INFO  SOURCES.txt
coup_gto/engine/: __init__.py  actions.py  state.py
coup_gto/rules/: __init__.py  base.py
coup_gto/solver/: __init__.py  mccfr.py
coup_gto/tests/: test_rollout_termination.py
coup_venv/: pyvenv.cfg
tests/: test_assassinate.py  test_base_engine.py  test_exchange.py  test_interaction_foreign_aid.py  test_mccfr.py  test_mccfr_full_mode.py  test_steal.py  test_tax.py
